# GhostMCP

./: .gitignore  Cargo.toml  LICENSE  README.md  check.bat  launch-mcp.bat  launch-test-cli.bat
.github/workflows/: ci.yml
config/: claude_desktop_config.json  default.toml  policy.toml
crates/ghost-agent/: Cargo.toml  README.md
crates/ghost-agent-exe/: Cargo.toml  README.md
crates/ghost-agent-exe/src/: main.rs
crates/ghost-agent/src/: backend.rs  ipc.rs  lib.rs  multi_client.rs  safety.rs
crates/ghost-analysis-mcp/: Cargo.toml  README.md
crates/ghost-analysis-mcp/src/: lib.rs  main.rs
crates/ghost-analysis-mcp/src/handlers/: dump_handler.rs  mod.rs
crates/ghost-analysis-mcp/src/tools/: dump.rs  introspect.rs  mod.rs  pointer.rs  scanner.rs  structure.rs  watch.rs
crates/ghost-common/: Cargo.toml  README.md
crates/ghost-common/src/: error.rs  ipc.rs  lib.rs  logging.rs  safety.rs
crates/ghost-common/src/types/: ai.rs  api_override.rs  api_trace.rs  breakpoint.rs  command.rs  debug_session.rs  dump.rs  event.rs  execution.rs  hooks.rs  instruction.rs  introspection.rs  mcp.rs  memory.rs  mod.rs  module.rs  pattern.rs  pattern_search.rs  pe.rs  pointer_scanner.rs  process.rs  scan.rs  scanner.rs  script.rs  structure.rs  thread.rs  watch.rs
crates/ghost-core/: Cargo.toml  README.md
crates/ghost-core-mcp/: Cargo.toml  README.md
crates/ghost-core-mcp/src/: lib.rs  main.rs
crates/ghost-core-mcp/src/handlers/: action_cache.rs  command.rs  decompile.rs  disasm.rs  mod.rs
crates/ghost-core-mcp/src/tools/: command.rs  debug.rs  disasm.rs  execution.rs  memory.rs  meta.rs  mod.rs  module.rs  safety.rs  script.rs  session.rs  xrefs.rs
crates/ghost-core/src/: advanced_monitor.rs  advanced_pattern_search.rs  api_override.rs  api_trace.rs  api_trace_hooks.rs  assembler.rs  debug.rs  disasm.rs  dump.rs  execution.rs  extended_hooks.rs  hooks.rs  introspection.rs  lib.rs  memory.rs  pattern_scanner.rs  pe.rs  pointer_scanner.rs  process.rs  scanner.rs  structure.rs  symbols.rs  threads.rs  traits.rs  watch.rs  xrefs.rs
crates/ghost-extended-mcp/: Cargo.toml  README.md
crates/ghost-extended-mcp/src/: lib.rs  main.rs
crates/ghost-extended-mcp/src/handlers/: extended_handler.rs  mod.rs
crates/ghost-extended-mcp/src/tools/: addresslist.rs  antidebug.rs  injection.rs  input.rs  memory.rs  mod.rs  speedhack.rs
crates/ghost-loader/: Cargo.toml  README.md
crates/ghost-loader/src/: injector.rs  main.rs  process.rs
crates/ghost-mcp-client/: Cargo.toml  README.md
crates/ghost-mcp-client/src/: main.rs
crates/ghost-mcp-client/tests/: README.md  mcp_remote_bridge.rs  remote_integration.rs
crates/ghost-mcp-common/: Cargo.toml  README.md  build.rs
crates/ghost-mcp-common/src/: config.rs  data.rs  error.rs  ipc.rs  lib.rs  meta.rs  registry.rs  server.rs  types.rs
crates/ghost-re-backends/: Cargo.toml  README.md
crates/ghost-re-backends/src/: common.rs  error.rs  ghidra.rs  ida.rs  lib.rs  radare2.rs
crates/ghost-static-mcp/: Cargo.toml  README.md
crates/ghost-static-mcp/src/: lib.rs  main.rs
crates/ghost-static-mcp/src/handlers/: mod.rs  re_handler.rs
crates/ghost-static-mcp/src/tools/: ai.rs  ghidra.rs  ida.rs  mod.rs  radare2.rs  trace.rs  yara.rs
crates/ghost-test-target/: Cargo.toml  README.md
crates/ghost-test-target/src/: main.rs
data/: categories.json  prompts.json  resources.json  tool_docs.json  tools.json
data/api_packs/: advapi32.json  kernel32.json  ntdll.json  user32.json  ws2_32.json
examples/: README.md  check_build.ps1  check_registry.ps1  check_tools.ps1
scripts/: convert_rohitab_api.py  launch-mcp.ps1  launch-test-cli.ps1  test-mcp.ps1
tests/: README.md  extended_integration.rs  integration.rs  tool_count_golden.rs
tests/integration/: ipc_fuzzing.rs  mcp_protocol.rs  meta_tools.rs  mod.rs  multi_client.rs  multi_server_integration.rs  patch_aware_dump.rs  pointer_scanner.rs  static_tools.rs  tool_count_golden.rs
