[package]
name = "ghost-agent"
version.workspace = true
edition = "2021"
description = "Injectable DLL agent for Ghost-MCP"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ghost-common = { path = "../ghost-common" }
ghost-core = { path = "../ghost-core" }
windows = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
parking_lot = "0.12"
once_cell = "1.19"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
