[package]
name = "ghost-extended-mcp"
version.workspace = true
edition.workspace = true
description = "Ghost-MCP Extended Capabilities Server - Port 13343, ~85 tools for injection, anti-debug, input automation, and more"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ghost-extended-mcp"
path = "src/main.rs"

[lib]
name = "ghost_extended_mcp"
path = "src/lib.rs"

[dependencies]
# Internal crates
ghost-common = { path = "../ghost-common" }
ghost-mcp-common = { path = "../ghost-mcp-common" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
