[package]
name = "ghost-mcp-client"
version.workspace = true
edition = "2021"
description = "CLI MCP client for testing Ghost-MCP"

[[bin]]
name = "ghost-client"
path = "src/main.rs"

[dependencies]
ghost-common = { path = "../ghost-common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# No additional dev dependencies needed - we use raw NT API bindings

[[test]]
name = "remote_integration"
path = "tests/remote_integration.rs"

[[test]]
name = "mcp_remote_bridge"
path = "tests/mcp_remote_bridge.rs"

[features]
default = []
# Enable remote process cloning tests (Windows only)
remote_tests = []
