[package]
name = "ghost-mcp-common"
version.workspace = true
edition.workspace = true
description = "Shared MCP server infrastructure for Ghost-MCP modular servers"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
ghost-common = { path = "../ghost-common" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Configuration
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
