[package]
name = "ghost-static-mcp"
version.workspace = true
edition.workspace = true
description = "Ghost-MCP Static Analysis Server - Port 13342, 84 tools for RE tools and AI"
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ghost-static-mcp"
path = "src/main.rs"

[lib]
name = "ghost_static_mcp"
path = "src/lib.rs"

[features]
default = ["radare2", "ghidra"]
radare2 = ["dep:ghost-re-backends", "ghost-re-backends/radare2"]
ghidra = ["dep:ghost-re-backends", "ghost-re-backends/ghidra"]
ida = ["dep:ghost-re-backends", "ghost-re-backends/ida"]
yara = ["ghost-core/yara"]

[dependencies]
# Internal crates
ghost-common = { path = "../ghost-common" }
ghost-mcp-common = { path = "../ghost-mcp-common" }
ghost-core = { path = "../ghost-core" }
ghost-re-backends = { path = "../ghost-re-backends", optional = true }
hex = { workspace = true }
once_cell = "1.19"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging/tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
